WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45422
[EFL] Regression (67001) Build break
https://bugs.webkit.org/show_bug.cgi?id=45422
Summary
[EFL] Regression (67001) Build break
Ryuan Choi
Reported
2010-09-08 16:47:48 PDT
/workspace/webkit/WebCore/platform/efl/ScrollbarEfl.cpp: In function ‘void scrollbarEflEdjeMessage(void*, Evas_Object*, Edje_Message_Type, int, void*)’: /workspace/webkit/WebCore/platform/efl/ScrollbarEfl.cpp:87:59: error: no matching function for call to ‘WebCore::ScrollbarEfl::setValue(int&)’ /workspace/webkit/WebCore/platform/Scrollbar.h:83:10: note: candidate is: bool WebCore::Scrollbar::setValue(int, WebCore::Scrollbar::ScrollSource) make[2]: *** [WebCore/CMakeFiles/webcore_efl.dir/platform/efl/ScrollbarEfl.cpp.o] Error 1 make[1]: *** [WebCore/CMakeFiles/webcore_efl.dir/all] Error 2 make: *** [all] Error 2
Attachments
Patch
(1.09 KB, patch)
2010-09-08 16:51 PDT
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
Patch
(1.09 KB, patch)
2010-09-08 17:05 PDT
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2010-09-08 16:51:58 PDT
Created
attachment 66962
[details]
Patch
Ryuan Choi
Comment 2
2010-09-08 17:05:46 PDT
Created
attachment 66968
[details]
Patch
WebKit Commit Bot
Comment 3
2010-09-09 01:48:37 PDT
Comment on
attachment 66968
[details]
Patch Clearing flags on attachment: 66968 Committed
r67070
: <
http://trac.webkit.org/changeset/67070
>
WebKit Commit Bot
Comment 4
2010-09-09 01:48:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug