2010-09-09  Ryuan Choi  <ryuan.choi@samsung.com>

Unreviewed attempt to fix EFL build after r67001.

        [EFL] Regression (67001) Build break
        https://bugs.webkit.org/show_bug.cgi?id=45422

        * platform/efl/ScrollbarEfl.cpp:
        (scrollbarEflEdjeMessage):

Canonical link: https://commits.webkit.org/57814@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67070 268f45cc-cd09-0410-ab3c-d52691b4dbfc